# server/api/swagger/swagger.yaml
@@ -1,175 +1,240 @@
 swagger: "2.0"
 info:
   version: "0.0.1"
-  title: Hangman App
-# during dev, should point to your local machine
+  title: User Manager
+  description: >
+    This is a sample API for managing a database of users.  User accounts can be created, deleted, edited, and retrieved.
+    Users can also log-in, which will create a session cookie. Logging out will delete the cookie.
 host: localhost:10010
-# basePath prefixes all resource paths 
-basePath: /
-# 
-schemes:
-  # tip: remove http to make production-grade
-  - http
-  - https
-# format of bodies a client can send (Content-Type)
 consumes:
   - application/json
-# format of the responses to the client (Accepts)
 produces:
   - application/json
+
+definitions:
+  # A simple username/password combo for logging in
+  login:
+    required: [username, password]
+    properties:
+      username:
+        type: string
+        minLength: 1
+      password:
+        type: string
+        minLength: 1
+
+  # The user schema is defined in the "user.yaml" file.
+  # Swagger-Server will automatically convert the user.yaml
+  # file to JSON format
+  user:
+    description: a registered user
+    required: [username, password, name]
+    properties:
+      username:
+        type: string
+        minLength: 4
+        maxLength: 20
+        pattern: "^\\w+$"   # only allows alphanumeric characters
+        description: username must be unique
+      password:
+        type: string
+        minLength: 4
+        description: a super-secure, four-character password :)
+      name:
+        type: object
+        description: the user's real name
+        required: [firstName]
+        properties:
+          firstName:
+            type: string
+            minLength: 1
+          lastName:
+            type: string
+      email:
+        type: string
+      telephone:
+        type: integer
+        minimum: 1000000000
+      lastLoginDate:
+        type: string
+        format: date-time
+        description: when the user last logged in (set by the server)
+        readOnly: true
+    example:
+      username: jdoe
+      name:
+        firstName: John
+        lastName: Doe
+      email: john.doe@abc.com
+      telephone: 5551234567
+      lastLoginDate: 2015-05-11T14-00-32Z
+
+
+# NOTE: This does NOT set global parameters for all operations.
+# It just defines parameter templates that can be referenced by operations (i.e. it saves typing)
+parameters:
+  sessionCookie: &sessionCookie
+    name: Cookie
+    in: header
+    required: true
+    type: string
+    description: The session cookie
+
+  username: &username
+    name: username
+    in: path
+    required: true
+    type: string
+    description: This is the {username} path parameter
+
+  userData: &userData
+    name: body
+    in: body
+    required: true
+    schema:
+      $ref: "#/definitions/user"
+    description: The user data for create/update operations
+
+
 paths:
-  /game:
-    # our controller name
-    x-swagger-router-controller: game
+  /users:
+    x-swagger-router-controller: users
     get:
       operationId: getAll
-      description: get the games list
-      # define the type of response for Success "200" and Error
+      summary: Returns all users in the database.  
+      description: Only the "admin" user can access this.
       responses:
-        "200":
-          description: Success
+        200:
+          description: Returns the list of users
           schema:
-            $ref: "#/definitions/GetGamesListResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
+            type: array
+            items:
+              $ref: "#/definitions/user"
+        401:
+          description: Hey! You're not the "admin" user!
+
     post:
-      operationId: save
-      description: add a new game to the list
-      consumes:
-        - application/octet-stream
-      # game info to be stored
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/GeneralResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-  /game/{id}:
-    # our controller name
-    x-swagger-router-controller: game
-    get:
-      operationId: getOne
-      description: get a game
-      # define the type of response for Success "200" and Error
+      summary: Creates a new user
+      description: Only the "admin" user can create users.
       parameters:
-        - name: id
-          type: string
-          in: path
-          required: true
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/GetGameResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-    put:
-      operationId: update
-      description: update a game
-      # define the parameters
-      parameters:
-        - name: id
-          description: Game id
-          type: string
-          in: path
-          required: true
-        - name: title
-          description: Game properties
+        - name: body
           in: body
           required: true
           schema:
-            $ref: "#/definitions/Guess"
+            $ref: "#/definitions/user"
+          description: The user account to create
       responses:
-        "200":
-          description: Success
+        201:
+          description: New user was created successfully
           schema:
-            $ref: "#/definitions/GeneralResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
-    delete:
-      operationId: delGame
-      description: delete a game
-      # define the parameters
+            $ref: "#/definitions/user"
+          headers:
+            Location:
+              type: string
+              description: The Server returns the URL of the new user
+        400:
+          description: Bad JSON formatting in the request
+
+
+  /users/{username}:
+    x-swagger-router-controller: users
+    get:
+      summary: Retrieves a user
+      description: >
+        users can only retrieve their own account, not other users'. Except for the "admin" user, who can retrieve anyone.
       parameters:
-        - name: id
-          description: Game id
-          type: string
-          in: path
-          required: true
+        - *username
+        - *sessionCookie
       responses:
-        "200":
-          description: Success
+        200:
+          description: Returns the user's data
           schema:
-            $ref: "#/definitions/GeneralResponse"
-        default:
-          description: Error
+            $ref: "#/definitions/user"
+        401:
+          description: You tried to retrieve someone else's account, and you're not the "admin" user.
+        404:
+          description: The {username} was not found
+
+    post:
+      summary: Edits a user
+      description: >
+        Users can only edit their own account, not other users'.  Except for the "admin" user, who can edit anyone.
+      parameters:
+        - *username
+        - *userData
+        - *sessionCookie
+      responses:
+        200:
+          description: User data was saved successfully
           schema:
-            $ref: "#/definitions/ErrorResponse"
-  /swagger:
-    x-swagger-pipe: swagger_raw
-# complex objects have schema definitions
-definitions:
-  GetGamesListResponse:
-    required:
-      - games
-    properties:
-      # The array of games
-      games:
-        type: array
-        items: 
-          type: object
-          properties:
-            id:
+            $ref: "#/definitions/user"
+        400:
+          description: Bad JSON formatting in the request
+        401:
+          description: You tried to edit someone else's account, and you're not the "admin" user.
+        404:
+          description: The {username} was not found
+
+    delete:
+      summary: Deletes a user
+      description: >
+        Users can only delete their own account, not other users'.  Except for the "admin" user, who can delete anyone.
+      parameters:
+        - *username
+        - *sessionCookie
+      responses:
+        204:
+          description: User account was deleted
+        401:
+          description: You tried to edit someone else's account, and you're not the "admin" user.
+        404:
+          description: The {username} was not found
+
+
+  /users/login:
+    x-swagger-router-controller: users
+    post:
+      summary: Logs in
+      description: |
+        Try logging in with username "jdoe" and password "jdoe".
+        Then try logging in with username "admin" and password "admin".
+      parameters:
+        - name: body
+          in: body
+          required: true
+          description: The login credentials
+          schema:
+            $ref: "#/definitions/login"
+      responses:
+        200:
+          description: Login was successful
+          schema:
+            $ref: "#/definitions/user"
+          headers:
+            Set-Cookie:
               type: string
-            progress:
+              description: The session cookie
+              default: demo-session-id=123456789012345678901234567890
+
+
+  /users/{username}/logout:
+    x-swagger-router-controller: users
+    post:
+      summary: Logs out the given user
+      description: >
+        Users can only log themselves out, not other users. Except the "admin" user, who can log-out anyone.
+      parameters:
+        - *username
+        - *sessionCookie
+      responses:
+        204:
+          description: Logout was successful
+          headers:
+            Set-Cookie:
               type: string
-            mistakes:
-              type: number
-  GetGameResponse:
-    required:
-      - id
-      - progress
-      - mistakes
-    properties:
-      id:
-        type: string
-      progress: 
-        type: string
-      mistakes:
-        type: number
-  Guess:
-    type: object
-    properties:
-      word:
-        type: string
-        description: guessed solution word
-      letter:
-        type: string
-        description: letter to guess next
-  GeneralResponse:
-    type: object
-    properties:
-      success:
-        type: number
-        description: returns 1 if successful
-      description:
-        type: string
-        description: a short comment 
-    required:
-      - success
-      - description
-  ErrorResponse:
-    required:
-      - message
-    properties:
-      message:
-        type: string
+              description: Deletes the session cookie (by making expire in the past)
+              default: demo-session-id=deleted; Expires=Thu, 01-Jan-1970 00:00:01 GMT; Path=/
+        401:
+          description: You tried to log someone else out, and you're not the "admin" user.
+        404:
+          description: The {username} was not found
